force-app/main/default/objects/Booking__c/fields/Development_Charge__c.field-meta.xml
<CustomField>
    <fullName>Development_Charge__c</fullName>
    <label>Development Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>