force-app/main/default/objects/Booking__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>