force-app/main/default/objects/Booking__c/fields/Documents_Sent_To_Bank__c.field-meta.xml
<CustomField>
    <fullName>Documents_Sent_To_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Sent To Bank</label>
    <type>Checkbox</type>
</CustomField>