force-app/main/default/objects/Booking__c/fields/Drawn_No__c.field-meta.xml
<CustomField>
    <fullName>Drawn_No__c</fullName>
    <label>Drawn No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>