force-app/main/default/objects/Booking__c/fields/E_mail2__c.field-meta.xml
<CustomField>
    <fullName>E_mail2__c</fullName>
    <label>E  mail</label>
    <type>Email</type>
</CustomField>