force-app/main/default/objects/Booking__c/fields/Educational_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Educational_Qualifications__c</fullName>
    <label>Educational Qualifications</label>
    <length>80</length>
    <type>Text</type>
</CustomField>