force-app/main/default/objects/Booking__c/fields/EFT__c.field-meta.xml
<CustomField>
    <fullName>EFT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFT</label>
    <type>Checkbox</type>
</CustomField>