force-app/main/default/objects/Booking__c/fields/Father_Spouse_Name1__c.field-meta.xml
<CustomField>
    <fullName>Father_Spouse_Name1__c</fullName>
    <label>Father/Spouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>