force-app/main/default/objects/Booking__c/fields/FeedBack_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FeedBack_Sent_Date__c</fullName>
    <label>FeedBack Sent Date</label>
    <type>DateTime</type>
</CustomField>