force-app/main/default/objects/Booking__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <label>Finance Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Appoved by Finance Team</fullName>
            </value>
            <value>
                <fullName>Rejected by Finance Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>