force-app/main/default/objects/Booking__c/fields/First_Applicant_Photo__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Photo__c</fullName>
    <label>First Applicant Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>