force-app/main/default/objects/Booking__c/fields/First_Dibursement_Expected_date__c.field-meta.xml
<CustomField>
    <fullName>First_Dibursement_Expected_date__c</fullName>
    <label>First Dibursement Expected date</label>
    <type>Date</type>
</CustomField>