force-app/main/default/objects/Booking__c/fields/First_disbursement__c.field-meta.xml
<CustomField>
    <fullName>First_disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First disbursement Done</label>
    <type>Checkbox</type>
</CustomField>