force-app/main/default/objects/Booking__c/fields/First_Disbursement_Received__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Disbursement Received</label>
    <type>Checkbox</type>
</CustomField>