force-app/main/default/objects/Booking__c/fields/Flat_Actual_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Actual_Number__c</fullName>
    <formula>Plot__r.Plot_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat Number</label>
    <type>Text</type>
</CustomField>