force-app/main/default/objects/Booking__c/fields/generator_and_prepaid_gas_charges__c.field-meta.xml
<CustomField>
    <fullName>generator_and_prepaid_gas_charges__c</fullName>
    <label>Generator and Prepaid Gas Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>