force-app/main/default/objects/Booking__c/fields/Ground_Floor_Garden__c.field-meta.xml
<CustomField>
    <fullName>Ground_Floor_Garden__c</fullName>
    <label>Ground Floor Garden</label>
    <length>20</length>
    <type>Text</type>
</CustomField>