force-app/main/default/objects/Booking__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>Sub_Total__c * GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAXES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>