force-app/main/default/objects/Booking__c/fields/GSTswap__c.field-meta.xml
<CustomField>
    <fullName>GSTswap__c</fullName>
    <label>GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>