force-app/main/default/objects/Booking__c/fields/Handover_User__c.field-meta.xml
<CustomField>
    <fullName>Handover_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handover User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingsWFgX</relationshipName>
    <type>Lookup</type>
</CustomField>