force-app/main/default/objects/Booking__c/fields/Hoarding__c.field-meta.xml
<CustomField>
    <fullName>Hoarding__c</fullName>
    <label>Hoarding</label>
    <length>100</length>
    <type>Text</type>
</CustomField>