force-app/main/default/objects/Booking__c/fields/House_Number1__c.field-meta.xml
<CustomField>
    <fullName>House_Number1__c</fullName>
    <label>House Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>