force-app/main/default/objects/Booking__c/fields/Infrastructure_Charges_per_sqft__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Charges_per_sqft__c</fullName>
    <label>Infrastructure Charges per sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>