force-app/main/default/objects/Booking__c/fields/Interest_From_PS__c.field-meta.xml
<CustomField>
    <fullName>Interest_From_PS__c</fullName>
    <label>Interest From PS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>