force-app/main/default/objects/Booking__c/fields/Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid__c</fullName>
    <label>Interest Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>