force-app/main/default/objects/Booking__c/fields/Interest_Pending__c.field-meta.xml
<CustomField>
    <fullName>Interest_Pending__c</fullName>
    <formula>Total_Interest__c -  Interest_Paid__c -  Interest_Waive_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>