force-app/main/default/objects/Booking__c/fields/Interest_Waive_Off__c.field-meta.xml
<CustomField>
    <fullName>Interest_Waive_Off__c</fullName>
    <label>Interest Waive Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>