force-app/main/default/objects/Booking__c/fields/Is_100_Collected__c.field-meta.xml
<CustomField>
    <fullName>Is_100_Collected__c</fullName>
    <formula>Total_received_Amount__c &gt;= (Total__c * 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 100% Collected</label>
    <type>Checkbox</type>
</CustomField>