force-app/main/default/objects/Booking__c/fields/Is_90_Collected__c.field-meta.xml
<CustomField>
    <fullName>Is_90_Collected__c</fullName>
    <formula>Total_received_Amount__c &gt;= (Total__c * 0.90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 90% Collected</label>
    <type>Checkbox</type>
</CustomField>