force-app/main/default/objects/Booking__c/fields/Is_90_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_90_Collected_Date__c</fullName>
    <label>Is 90% Collected Date</label>
    <type>DateTime</type>
</CustomField>