force-app/main/default/objects/Booking__c/fields/Is_NDC_Responded__c.field-meta.xml
<CustomField>
    <fullName>Is_NDC_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NDC Responded</label>
    <type>Checkbox</type>
</CustomField>