force-app/main/default/objects/Booking__c/fields/Joint_Inspection_Count__c.field-meta.xml
<CustomField>
    <fullName>Joint_Inspection_Count__c</fullName>
    <description>jins count</description>
    <label>Joint Inspection Count</label>
    <summaryForeignKey>Joint_Inspection__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>