force-app/main/default/objects/Booking__c/fields/Khata_charges__c.field-meta.xml
<CustomField>
    <fullName>Khata_charges__c</fullName>
    <label>Khata charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>