force-app/main/default/objects/Booking__c/fields/Khata_No__c.field-meta.xml
<CustomField>
    <fullName>Khata_No__c</fullName>
    <label>Khata No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>