force-app/main/default/objects/Booking__c/fields/KPTCL_and_SI__c.field-meta.xml
<CustomField>
    <fullName>KPTCL_and_SI__c</fullName>
    <label>KPTCL and STP charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>