force-app/main/default/objects/Booking__c/fields/Last_Name_SurName__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_SurName__c</fullName>
    <label>Last Name/SurName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>