force-app/main/default/objects/Booking__c/fields/Leads_source__c.field-meta.xml
<CustomField>
    <fullName>Leads_source__c</fullName>
    <label>Leads source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample 1</fullName>
            </value>
            <value>
                <fullName>Sample 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>