force-app/main/default/objects/Booking__c/fields/Legal_charges__c.field-meta.xml
<CustomField>
    <fullName>Legal_charges__c</fullName>
    <label>Legal charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>