force-app/main/default/objects/Booking__c/fields/Legal_Documentation_Chargesswap__c.field-meta.xml
<CustomField>
    <fullName>Legal_Documentation_Chargesswap__c</fullName>
    <label>Legal &amp; Documentation Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>