force-app/main/default/objects/Booking__c/fields/Legal_Loan_Uploads_Successful__c.field-meta.xml
<CustomField>
    <fullName>Legal_Loan_Uploads_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal/Loan Uploads Successful</label>
    <type>Checkbox</type>
</CustomField>