force-app/main/default/objects/Booking__c/fields/Loan_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Expected_Date__c</fullName>
    <label>Loan Expected Date</label>
    <type>Date</type>
</CustomField>