force-app/main/default/objects/Booking__c/fields/Loan_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanctioned__c</fullName>
    <label>Loan Sanctioned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>