force-app/main/default/objects/Booking__c/fields/Loan_User__c.field-meta.xml
<CustomField>
    <fullName>Loan_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingsWFdJ</relationshipName>
    <type>Lookup</type>
</CustomField>