force-app/main/default/objects/Booking__c/fields/Maintenance_charges__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_charges__c</fullName>
    <label>Maintenance charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>