force-app/main/default/objects/Booking__c/fields/Maintenance_Chargeswap__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Chargeswap__c</fullName>
    <label>Maintenance Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>