force-app/main/default/objects/Booking__c/fields/Maintenance_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Expected_Date__c</fullName>
    <label>Maintenance Expected Date</label>
    <type>Date</type>
</CustomField>