force-app/main/default/objects/Booking__c/fields/Maintenance_User__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingsNfdR</relationshipName>
    <type>Lookup</type>
</CustomField>