force-app/main/default/objects/Booking__c/fields/Marital_Status1__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status1__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>UnMarried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>