force-app/main/default/objects/Booking__c/fields/Mobile_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Alternate__c</fullName>
    <label>Mobile Alternate</label>
    <type>Phone</type>
</CustomField>