force-app/main/default/objects/Booking__c/fields/Mobile_Primary3__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Primary3__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>