force-app/main/default/objects/Booking__c/fields/Name_of_Company1__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Company1__c</fullName>
    <label>Name of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>