force-app/main/default/objects/Booking__c/fields/Name_of_Referee__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Referee__c</fullName>
    <label>Name of Referee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>