force-app/main/default/objects/Booking__c/fields/Name_of_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Spouse__c</fullName>
    <label>Name of Spouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>