force-app/main/default/objects/Booking__c/fields/Name_of_the_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Channel_Partner__c</fullName>
    <label>Name of the Channel Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>