force-app/main/default/objects/Booking__c/fields/Nationality_Applicant2__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Applicant2__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>PIO</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>OCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>