force-app/main/default/objects/Booking__c/fields/NDC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>NDC_Approval_Status__c</fullName>
    <label>NDC Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
                <default>true</default>
                <label>Not Initiated</label>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>