force-app/main/default/objects/Booking__c/fields/ndc_Response__c.field-meta.xml
<CustomField>
    <fullName>ndc_Response__c</fullName>
    <label>No Due Certificate Customer Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>