force-app/main/default/objects/Booking__c/fields/Net_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Receipt_Amount__c</fullName>
    <formula>MAX(Total_received_Amount__c - Debit_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Receipt Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>