force-app/main/default/objects/Booking__c/fields/NewsPaper_Ad__c.field-meta.xml
<CustomField>
    <fullName>NewsPaper_Ad__c</fullName>
    <label>NewsPaper Ad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>