force-app/main/default/objects/Booking__c/fields/Number_of_Children1__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children1__c</fullName>
    <label>Number of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>