force-app/main/default/objects/Booking__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Primary Applicant Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Govt Services</fullName>
            </value>
            <value>
                <fullName>Manager and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>