force-app/main/default/objects/Booking__c/fields/Old_Agreement_Collected__c.field-meta.xml
<CustomField>
    <fullName>Old_Agreement_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Agreement Collected</label>
    <type>Checkbox</type>
</CustomField>