force-app/main/default/objects/Booking__c/fields/Open_Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Open_Terrace_Area__c</fullName>
    <formula>Plot__r.Terrace_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Terrace Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>