force-app/main/default/objects/Booking__c/fields/Organisation_Designation3__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Designation3__c</fullName>
    <label>Organisation /Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>