force-app/main/default/objects/Booking__c/fields/Original_Agreement_Collected__c.field-meta.xml
<CustomField>
    <fullName>Original_Agreement_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Agreement Collected</label>
    <type>Checkbox</type>
</CustomField>