force-app/main/default/objects/Booking__c/fields/Other_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Other_Amenities__c</fullName>
    <label>Other Amenities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>