force-app/main/default/objects/Booking__c/fields/Other_Profession1__c.field-meta.xml
<CustomField>
    <fullName>Other_Profession1__c</fullName>
    <label>Other Profession</label>
    <type>TextArea</type>
</CustomField>