force-app/main/default/objects/Booking__c/fields/Outflow__c.field-meta.xml
<CustomField>
    <fullName>Outflow__c</fullName>
    <label>Outflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>