force-app/main/default/objects/Booking__c/fields/OutFlow_Date__c.field-meta.xml
<CustomField>
    <fullName>OutFlow_Date__c</fullName>
    <label>OutFlow Date</label>
    <type>Date</type>
</CustomField>