force-app/main/default/objects/Booking__c/fields/Pan_Card_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pan Card Uploaded</label>
    <type>Checkbox</type>
</CustomField>