force-app/main/default/objects/Booking__c/fields/PAN_Number1__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number1__c</fullName>
    <label>Pan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>