force-app/main/default/objects/Booking__c/fields/Pan_Number_Applicant2__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number_Applicant2__c</fullName>
    <label>Pan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>