force-app/main/default/objects/Booking__c/fields/Passport_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Passport_Aadhar__c</fullName>
    <label>Passport Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>