force-app/main/default/objects/Booking__c/fields/Passport_PI_no3__c.field-meta.xml
<CustomField>
    <fullName>Passport_PI_no3__c</fullName>
    <label>Passport/pi no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>