force-app/main/default/objects/Booking__c/fields/Passport_Uploded__c.field-meta.xml
<CustomField>
    <fullName>Passport_Uploded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Uploded</label>
    <type>Checkbox</type>
</CustomField>