force-app/main/default/objects/Booking__c/fields/Permenant_Adress1__c.field-meta.xml
<CustomField>
    <fullName>Permenant_Adress1__c</fullName>
    <label>Permenant Adress</label>
    <type>TextArea</type>
</CustomField>